--- a/public/index.html
+++ b/public/index.html
@@ -5,44 +5,72 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="LuckyLumac Nigeria Limited is a leading provider of innovative and sustainable solutions in the civil engineering and electrical services industry. Our expert team delivers top-quality design, construction, and renewable energy solutions."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta
+      name="keywords"
+      content="LuckyLumac, civil engineering, electrical services, renewable energy, construction, sustainable solutions, Nigeria, innovative engineering, electrical solutions"
+    />
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="LuckyLumac Nigeria Limited | Engineering & Electrical Services" />
+    <meta
+      property="og:description"
+      content="LuckyLumac Nigeria Limited offers sustainable engineering and electrical services, with expertise in construction, renewable energy, and cutting-edge solutions to meet customer needs."
+    />
+    <meta property="og:url" content="https://www.luckylumac.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="LuckyLumac Nigeria Limited | Engineering & Electrical Services" />
+    <meta
+      name="twitter:description"
+      content="LuckyLumac Nigeria Limited offers innovative and sustainable solutions in civil engineering, electrical services, and renewable energy for clients across various industries."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
+
+    <!-- Manifest File -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-
-           <!-- google fonts -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>LuckyLumac Nigeria Limited</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>LuckyLumac Nigeria Limited | Civil Engineering & Electrical Services</title>
+
+    <!-- Structured Data (JSON-LD for Business) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "LuckyLumac Nigeria Limited",
+        "url": "https://www.luckylumac.com",
+        "logo": "%PUBLIC_URL%/logo192.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+234 814 320 9741",
+          "contactType": "Customer Service"
+        },
+        "sameAs": [
+          "https://www.facebook.com/luckylumac",
+          "https://twitter.com/luckylumac",
+          "https://www.linkedin.com/company/luckylumac"
+        ]
+      }
+    </script>
   </head>
   <body>
     <noscript></noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
